refactor(vehicle): split dto-domain-entity mappers and decouple repository with interface and implementation class